# RoutingAlg

./: CMakeLists.txt  README.md  main-alt.cpp  main-routing.cpp  modules-salomon.sh  pipeline.conf  rand_prof.cpp
Docs/: Doxyfile.in  TimeTestThread.ods
FiltersSettings/: DiffEvoCities.csv  DiffEvoIndividual.cpp  DiffEvoIndividual.h  DifferentialEvolution.cpp  DifferentialEvolution.h  alternativesSettings.ini  main-diff-evo.cpp
Routing/Algorithms/Alternatives/: AlternativesAlgorithm.cpp  AlternativesAlgorithm.h  AlternativesPlateauAlgorithm.cpp  AlternativesPlateauAlgorithm.h  AlternativesPlateauTDPlugin.cpp  AlternativesPlateauTDPlugin.h  RouteSolution.cpp  RouteSolution.h
Routing/Algorithms/Base/: Algorithm.h  GoalDirectedAlgorithm.cpp  GoalDirectedAlgorithm.h  StaticRoutingAlgorithm.cpp  StaticRoutingAlgorithm.h
Routing/Algorithms/Common/: AlgorithmHelper.cpp  AlgorithmHelper.h  AlgorithmSettings.h  Build.h  Build.h.in  DistanceInfo.cpp  DistanceInfo.h  DistanceResult.h  FilterSettings.h  Result.cpp  Result.h  RouteInfo.h  Segment.cpp  Segment.h  SegmentBase.cpp  SegmentBase.h  VisitedNode.cpp  VisitedNode.h
Routing/Algorithms/GraphFilter/: GraphFilterBase.h  GraphFilterGeometry.cpp  GraphFilterGeometry.h  GraphFilterGeometryStartLocation.h  GraphFilterHierarchy.h
Routing/Algorithms/OneToMany/: DistanceMatrix.cpp  DistanceMatrix.h  OneToManyDijkstra.cpp  OneToManyDijkstra.h
Routing/Algorithms/OneToOne/Astar/: Astar.cpp  Astar.h  BidirectionalAstar.cpp  BidirectionalAstar.h
Routing/Algorithms/OneToOne/Dijkstra/: BidirectionalDijkstra.cpp  BidirectionalDijkstra.h  Dijkstra.cpp  Dijkstra.h
Routing/Algorithms/Probability/Algorithms/: MonteCarloProbability.cpp  MonteCarloProbability.h
Routing/Algorithms/Probability/Base/: ProbabilityAlgorithm.cpp  ProbabilityAlgorithm.h
Routing/Algorithms/Probability/Data/: CSVReader.cpp  CSVReader.h  Data.cpp  Data.h  ProbabilityProfile.cpp  ProbabilityProfile.h  ProbabilityResult.cpp  ProbabilityResult.h  Segment.h  SegmentTimeProbability.h  SpeedProbability.h  TimeLengthProbability.h  TimeProbability.h
Routing/Algorithms/Probability/Helpers/: ReorderingPredicates.h  Utility.cpp  Utility.h
Routing/Algorithms/Reordering/: ReorderingBase.cpp  ReorderingBase.h  SessionReordering.cpp  SessionReordering.h  TrafficFlowReordering.cpp  TrafficFlowReordering.h
Routing/Algorithms/Reordering/Data/: ReorderInput.h
Routing/Algorithms/TDAlgorithms/: TDBase.h  TDDAlternativesUtility.cpp  TDDAlternativesUtility.h  TDDijkstra.cpp  TDDijkstra.h  TDUtility.cpp  TDUtility.h
Routing/Algorithms/TravelCostCalculators/: CostCalculator.h  HeuristicTravelCostCalculator.h  TimeDependentTravelTimeCalculator.h  TravelCostCalculator.h  TravelTimeCalculator.h
Routing/Data/Collections/: BinaryHeap.h
Routing/Data/Enums/: ESpecificInfo.h  EVehiclesAccess.h  ObjectType.h
Routing/Data/Exceptions/: Exceptions.h
Routing/Data/Indexes/: GraphInfo.h  GraphMemory.cpp  GraphMemory.h  GraphPartMemory.cpp  GraphPartMemory.h
Routing/Data/Probability/: ProfileStorageBase.cpp  ProfileStorageBase.h  ProfileStorageHDF5.cpp  ProfileStorageHDF5.h
Routing/Data/Results/: PipelineResultStorageBase.h  PipelineResultStorageCSV.cpp  PipelineResultStorageCSV.h  PipelineResultStorageSQLite.cpp  PipelineResultStorageSQLite.h
Routing/Data/Structures/: DummyImplementation.cpp  Edge.h  EdgeData.h  EdgeRaw.h  GeometryShortcut.h  Node.h  NodePosition.h  NodeRaw.h  PathShortcut.h  RestrictedTurn.h  ShortcutPosition.h
Routing/Data/Structures/Generic/: PosData.h
Routing/Data/Structures/Geo/: GpsDPoint.h  GpsPoint.h  GpsRectangle.cpp  GpsRectangle.h
Routing/Data/Utility/: Constants.h  Definitions.h  DistanceCalculator.cpp  DistanceCalculator.h  FilesystemUtil.cpp  FilesystemUtil.h  GPSDistanceCalculation.h  TimeWatch.h
Routing/Hdf/: DataIndex.cpp  DataIndex.h  DataIndexBase.h  DataIndexPart.cpp  DataIndexPart.h  ELoadType.h  NameConst.h  RoutingIndexInfo.h
Routing/Hdf/Types/: RoutingIndexInfoCompType.cpp  RoutingIndexInfoCompType.h
Routing/Pipeline/: PipelineConfig.cpp  PipelineConfig.h  RoutingPipeline.cpp  RoutingPipeline.h  RoutingRequest.cpp  RoutingRequest.h
Routing/Pipeline/Workers/: AlternativesPlateauWorker.cpp  AlternativesPlateauWorker.h  OneToOneWorker.cpp  OneToOneWorker.h  PTDRWorker.cpp  PTDRWorker.h  ReorderingWorker.cpp  ReorderingWorker.h  RoutingPipelineWorkerBase.cpp  RoutingPipelineWorkerBase.h  TDDijkstraWorker.cpp  TDDijkstraWorker.h
Routing/Routing/Probability/: Data.h  MCSimulation.cpp  MCSimulation.h  main.cpp
Routing/Tests/: IOUtils.cpp  IOUtils.h  IdPair.h
Scripts/: clava-standalone.sh  complexTest.sh  generateResults.sh  genprof.awk  plot_pipeline_results.R  plot_vrp_heatmap.R  rename.sh  startTests.sh  valgrind_test.sh
Tests/: DataPaths.h.in  Environment.h  GraphAndDataStructTest.h  ProbabilityRoutingTest.h  ProfileStorageTest.h  ReorderingTest.h  RoutingPipelineTest.h  RoutingTestAlternatives.h  RoutingTestOneToMany.h  RoutingTestOneToOne.h  RoutingTestTime.h  main.cpp
api/: routing.cpp  routing.hpp
data/: data.hdf5  graph.hdf5  map_1306.hdf5  map_1932_to_7295.hdf5  pipeline.conf.in  routes.csv
data/routes/: 04_cities_cz_time.csv  05_random_cities.csv
include/inih/: ini.cpp
